# id3

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  yay.py
id3/: __init__.py  __main__.py  cache.py  lyrics.py  provider.py  request.py  tags.py  types.py
id3/lyrics_providers/: manual.py
id3/providers/: __init__.py  interactive.py  spotify.py
